--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,10 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+@import "./styles/variables";
+@import "./styles/navbar";
+
+
+
+
+body{
+  background-color: $color-background;
+  margin: 0;
 }
